@@ -235,6 +235,7 @@
                   <!-- used by start -->
                   <jbossHome>${env.JBOSS_HOME}</jbossHome>
                   <serverConfig>${lra.coordinator.xml.filename}</serverConfig>
+                  <javaOpts>${server.jvm.args}</javaOpts>
 
                   <!-- used by deploy-artifact -->
                   <groupId>org.jboss.narayana.rts</groupId>
@@ -263,6 +264,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
+              <argLine>${server.jvm.args}</argLine>
               <skipITs>false</skipITs>
               <reportsDirectory>${project.build.directory}/failsafe-reports-arq</reportsDirectory>
               <summaryFile>${project.build.directory}/failsafe-reports-arq/failsafe-summary.xml</summaryFile>
@@ -406,6 +408,19 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk17</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties>
+        <jvm.args.modular>--add-modules=java.se
+          --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.util.reflect=ALL-UNNAMED
+          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvm.args.modular>
+      </properties>
     </profile>
   </profiles>
 </project>
